--- a/src/components/molecules/SurahCard/index.css
+++ b/src/components/molecules/SurahCard/index.css
@@ -1,17 +1,71 @@
 .surah-card
 {
-    height: 75px;
-    padding: 8px;
+    width: calc(100% - 65px);
+    height: 85px;
+    display: flex;
+    align-items: center;
+    margin-left: 65px;
     border-radius: 7px;
-    border: 1px solid #fff;
-    background-color: #fff;
+    border-bottom: 2px solid #81C784;
+    background-size: 200% 100%;
+    background-image: linear-gradient(to right, #fff 50%, #E0F2F1 50%);
+    box-shadow: 0 0 10px rgba(234, 234, 234, 0.8);
     margin-bottom: 15px;
-    transition: 0.3s;
     box-sizing: border-box;
+    position: relative;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    transition: 0.5s;
 }
 
 .surah-card:hover
 {
-    border: 1px solid #4DB6AC;
+    background-position: -100% 0;
     cursor: pointer;
+}
+
+.surah-number-wrapper
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    fill: #4CAF50;
+    position: absolute;
+    left: -65px;
+}
+
+.surah-number-wrapper p
+{
+    position: absolute;
+}
+
+.surah-name-wrapper
+{
+    flex: 1;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 25px;
+}
+
+.surah-name p
+{
+    color: #757575;
+    font-weight: 500;
+}
+
+.surah-name span
+{
+    color: #999999;
+    font-size: 14px;
+    line-height: 21px;
+}
+
+.surah-name-ar
+{
+    color: #757575;
+    font-family: 'Saleem Quran', sans-serif;
+    font-size: 28px;
+    font-weight: normal;
 }
