--- a/src/components/molecules/AyahCard/index.css
+++ b/src/components/molecules/AyahCard/index.css
@@ -56,3 +56,41 @@
     padding-top: 15px;
     padding-bottom: 15px;
 }
+
+.audio-wrapper
+{
+    display: flex;
+    align-items: center;
+}
+
+.audio-button
+{
+    width: 35px;
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    border-radius: 50%;
+    fill: salmon;
+    padding: 10px;
+    box-sizing: border-box;
+    margin-top: 30px;
+    margin-right: 15px;
+    transition: 0.5s;
+}
+
+.audio-button:hover
+{
+    cursor: pointer;
+}
+
+.audio-button:focus
+{
+    outline: none;
+}
+
+.fa-pause
+{
+    display: none;
+}
