--- a/src/container/App.css
+++ b/src/container/App.css
@@ -1,3 +1,8 @@
+:root
+{
+    --content-width: 1024px;
+}
+
 .menubar-wrapper
 {
     height: 65px;
@@ -22,6 +27,11 @@
 {
     display: flex;
     justify-content: flex-end;
+    width: var(--content-width);
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: auto;
+    box-sizing: border-box;
 }
 
 .menubar a
