--- a/src/pages/Surah/index.css
+++ b/src/pages/Surah/index.css
@@ -126,3 +126,32 @@
 {
     display: none;
 }
+
+.pick-ayah
+{
+    width: calc(var(--content-width) - 30px);
+    margin: auto;
+    margin-bottom: 30px;
+    box-sizing: border-box;
+}
+
+.pick-ayah select,
+.pick-ayah select option
+{
+    color: #fff;
+}
+
+.pick-ayah select
+{
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 7px;
+    background-color: #80CBC4;
+}
+
+.pick-ayah select:focus
+{
+    outline: none;
+    box-shadow: 0 0 10px rgba(178, 223, 219, 0.85);
+}
